# supervisor-ag-ui-example

./: .gitignore  ARCHITECTURE_DECISION.md  INTERRUPT_FLOW_GUIDE.md  README.md  agent.py  langgraph.json  pyproject.toml  tool_registry.py
backend/: .env.example  langgraph.json  pyproject.toml
backend/src/: deepagent.py  mcp_setup.py  middleware.py  supervisor.py  tool_converter.py  tool_registry.py  video_agent.py  wifi_agent.py
backend/src/mcp_servers/: video_server.py  wifi_server.py
backend/src/utils/: __init__.py  agent_helpers.py  subagent_utils.py  ui_middleware.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css  toolSchemas.ts
mcp_servers/: video_server.py
plans/: build_plan.md  proposed_solution.md
