[project]
name = "ag-ui-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.2.0",
    "langchain>=1.0.2",
    "langchain-anthropic>=1.0.0",
    "langgraph>=1.0.1",
    "langgraph-cli[inmem]>=0.4.4",
]
