[project]
name = "ag-ui-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.2.5",
    "langchain>=1.0.3",
    "langchain-anthropic>=1.0.0",
    "langchain-mcp-adapters>=0.1.12",
    "langgraph>=1.0.1",
    "langgraph-cli[inmem]>=0.4.5",
    "mcp>=1.20.0",
]
